--- a/LOVE->xiexiaoyu/file/default.css
+++ b/LOVE->xiexiaoyu/file/default.css
@@ -2,7 +2,7 @@ body{margin:0;padding:0;background:#ffe;font-size:14px;font-family:'微软雅黑
 a {color:#000;font-size:14px;}
 #main{width:100%;}
 #wrap{position:relative;margin:0 auto;width:1100px;height:680px;margin-top:10px;}
-#text{width:450px;
+#text{width:272px;
 height:560px;
 left:188px;
 top:80px;position:absolute;
@@ -15,5 +15,5 @@ top:80px;position:absolute;
 #canvas{margin:0 auto;width:1100px;height:680px;}
 #error{margin:0 auto;text-align:center;margin-top:60px;display:none;}
 .hand{cursor:pointer;}
-.say{margin-left:5px;font-size: 100px}
+.say{margin-left:5px; font-size: 75px; white-space: nowrap;}
 .space{margin-right:150px;}
