--- a/tzh/file/default.css
+++ b/tzh/file/default.css
@@ -15,5 +15,5 @@ top:80px;position:absolute;
 #canvas{margin:0 auto;width:1100px;height:680px;}
 #error{margin:0 auto;text-align:center;margin-top:60px;display:none;}
 .hand{cursor:pointer;}
-.say{margin-left:5px;}
+.say{margin-left:5px;font-size:22px;}
 .space{margin-right:150px;}
